@@ -592,6 +592,7 @@ All (GUI):
 - Add XRC handler for wxSimplebook.
 - Return correct value from wxCommandEvent::GetString() for programmatically
   generated wxEVT_TEXT events from wxComboBox.
+- Accept "default" as font family value in XRC (pieleric).
 
 wxGTK:
 
